--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.7.2",
-    "load-grunt-tasks": "~0.2.1"
+    "load-grunt-tasks": "~0.2.1",
+    "grunt-simple-mocha": "~0.4.0",
+    "should": "~2.1.1",
+    "request": "~2.30.0",
+    "grunt-contrib-connect": "~0.5.0"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.1"
   }
 }
